fix: arrumando os gap

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header {
     height: 48px;
     display: flex;
     align-items: center;
-    gap: 0;
+    gap: 1rem;
     border: 1px solid var(--cor-borda);
     border-radius: 40px;
     padding: 4px 8px;
@@ -127,8 +127,8 @@ header {
     & .lupa {
       background-color: var(--cor-primaria);
       padding: 0.5rem;
-      border-radius: 100%;
-        &img {
+      border-radius: 50%;
+        & img {
           align-items: center;
           justify-content: center;
       }
@@ -136,7 +136,7 @@ header {
     }
 
       & img {
-        height: auto;
+        height: 10px;
       }
     }
   }
